<resources>

    <string name="app_name">云种</string>
    <!--classic_app-->
    <string name="classic_app_ok">好</string>
    <string name="classic_app_confirm">确定</string>
    <string name="classic_app_cancel">取消</string>
    <string name="classic_app_finish">完成</string>
    <!--classic-->
    <string name="classic_submit">提交</string>
    <string name="classic_version_format">版本：%1$s(%2$d)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--关于页面  -->
    <string name="lable_name_about">关于</string>
    <string name="versionName">2.0</string>
    <string name="jianchaxinbanben">检查新版本</string>
    <string name="tel">客服电话：</string>
    <string name="phonenumber">0571-86713550</string>
    <string name="banquan">版权所有©云种</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- 登录页面 -->
    <string name="prompt_email">请输入账号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录中</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">登录失败</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- 搜索 -->
    <string name="search_recent">历史搜索</string>

    <!-- 扫描二维码 -->
    <string name="scanqrcode_bundleextrakey_bindId">bundleextrakey_bindId</string>


</resources>
