<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE" >
    <ImageView
        android:id="@+id/imageview"
        android:layout_height="150dp"
        android:layout_width="150dp"
        android:layout_marginTop="96dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/colorlogo"
		/>

    <LinearLayout 
        android:id="@+id/layout_versionname"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/imageview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/app_name"
			android:textColor="#666666"
			android:textSize="18dp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
			android:text="V"
			android:textColor="#666666"
			android:textSize="18dp" />

		<TextView
			android:id="@+id/tv_versionname"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/versionName"
			android:textColor="#666666"
			android:textSize="18dp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:orientation="vertical"
		android:background="@color/background"
		android:layout_below="@+id/layout_versionname">
		<RelativeLayout 
			    android:layout_width="match_parent"
				android:layout_height="wrap_content"
			    >

			<TextView
				android:id="@+id/btn_select"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:background="@drawable/selector_btn_click_bg"
				android:drawableRight="@drawable/goo"
				android:gravity="left|center_vertical"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:text="@string/jianchaxinbanben"
				android:textColor="#666666"
				android:textSize="15sp" />
           </RelativeLayout>
           
	</LinearLayout>

	<LinearLayout
		android:id="@+id/id_ll_phone"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_above="@+id/banquan"
		android:layout_marginBottom="5dp"
		android:layout_centerHorizontal="true"
		>
        <TextView 
		    android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/tel"
	        android:textColor="@color/text_black_second"
	        android:textSize="14dp"/>
	    <TextView 
	        android:id="@+id/tv_phonenumber"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/phonenumber"
			android:textColor="@color/text_black_second"
			android:textSize="14dp"/>
	        <!--android:textColor="#0099ff"-->

	    
	</LinearLayout>

	<TextView 
	    android:id="@+id/banquan"
	    android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/banquan"
        android:textColor="@color/text_black_second"
        android:textSize="14dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
	
	
</RelativeLayout>